--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Django Project-login page</title>
+    <title>Django Project-post page</title>
 </head>
 <body>
     {% block changepart%}
